rentals checked and fixed for errors. I fixed the css validation and so contrast issues.

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -288,7 +288,7 @@ main {
 }
 
 .price-reservation {
-    color: #007bff;
+    color: #000;
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -296,7 +296,7 @@ main {
 .price-walk-in {
     font-weight: bold;
     margin-bottom: 5px;
-    color: red;
+    color: #000;
 }
 
 
